[gd_scene load_steps=12 format=3 uid="uid://7f6posu4r607"]

[ext_resource type="Script" uid="uid://cn62wqcbku4eq" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dwspxd62kyt73" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://7vh1aaffxhpr" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://r7qg34uiua5p" path="res://tile_layer.tscn" id="3_272bh"]
[ext_resource type="PackedScene" uid="uid://b273n4ww70bc2" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://danbt42ql60pu" path="res://art/gameover.wav" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://b0eoodjacsebo" path="res://powerups.tscn" id="6_272bh"]
[ext_resource type="AudioStream" uid="uid://djbolmmvewapi" path="res://sounds/bg_music.mp3" id="6_kek77"]
[ext_resource type="AudioStream" uid="uid://cltni81nde2su" path="res://sounds/heal.wav" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://7j07h0ry5iqc" path="res://ui.tscn" id="10_4c57u"]

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")
col_arr = PackedColorArray(0.1305, 0.29, 0.266075, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.123429, 0.357781, 0.299774, 1)

[node name="TileLayer" parent="." instance=ExtResource("3_272bh")]

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ig7tw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0.15, 0.15, 0.15, 1)

[node name="Powerups" parent="." instance=ExtResource("6_272bh")]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kek77")
volume_db = -4.952

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7mycd")

[node name="HeartPowerupTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Heal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5vw27")
volume_db = -3.467

[node name="UI" parent="." instance=ExtResource("10_4c57u")]

[connection signal="heal" from="." to="Powerups" method="_on_main_heal"]
[connection signal="heal" from="." to="HUD" method="_on_heal"]
[connection signal="inc_max_hearts" from="." to="HUD" method="_on_main_inc_max_hearts"]
[connection signal="lvl_2_end" from="." to="TileLayer" method="end_lvl_2"]
[connection signal="lvl_2_end" from="." to="Player" method="end_lvl_2"]
[connection signal="lvl_2_end" from="." to="Powerups" method="end_lvl_2"]
[connection signal="lvl_2_end" from="." to="HUD" method="end_lvl_2"]
[connection signal="lvl_2_start" from="." to="TileLayer" method="start_lvl_2"]
[connection signal="lvl_2_start" from="." to="Player" method="start_lvl_2"]
[connection signal="lvl_2_start" from="." to="Powerups" method="start_lvl_2"]
[connection signal="lvl_2_start" from="." to="HUD" method="start_lvl_2"]
[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
[connection signal="hit" from="Player" to="HUD" method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="game_over" from="HUD" to="." method="game_over"]
[connection signal="game_over" from="HUD" to="Powerups" method="_on_hud_game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="HeartPowerupTimer" to="." method="_on_heart_powerup_timer_timeout"]
[connection signal="diff_chng" from="UI" to="." method="change_difficulty"]
[connection signal="helvetica_theme" from="UI" to="." method="hud_helvetica_theme"]
[connection signal="lvl1" from="UI" to="." method="Lvl1"]
[connection signal="lvl2" from="UI" to="." method="Lvl2"]
[connection signal="pixel_theme" from="UI" to="." method="hud_pixel_theme"]
